# agile-maskingise-pqc

./: LICENSE  README.md
gcc/: riscv-opc.c  riscv-opc.h
hw/: frv_common.vh  frv_core.v  frv_gprs.v  frv_masked_alu.v  frv_pipeline.v  frv_pipeline_decode.v  frv_pipeline_decode.vh  frv_pipeline_execute.v  keccak.vhd  keccak_controller.vhd  keccak_counter.vhd  keccak_rc.vhd  keccak_round.vhd  keccak_settings.vhd
sw/: CMakeLists.txt
sw/eval/: CMakeLists.txt  cpucycles.h  measure_speed.c
sw/include/: core_ops.h  gadgets.h  masked.h  masked_representations.h
sw/src/: bike_rotr.c  frodo_sampler.c  gadgets.c  haetae_sampler.c  masked_cmp.c  masked_fisheryates.c  masked_i2c.c  masked_keccak.c  masked_reject.c  masked_representations.c  masked_sorting.c
